--- a/css.css
+++ b/css.css
@@ -1,17 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap');
-
 body {
     display: grid;
     grid-template-columns: 150px 1fr 150px;
     grid-template-rows: 40px 1fr  50px;
     margin: 0;
-    background-color: blueviolet;
+    background-color: (--bg2);
     min-height: 100vh;
     gap: 10px;
     background-color: var(--bg);
     color: var(--accent);
-    font-family: 'Noto Sans Korean' sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
 }
+html.light{
+    --bg: white;
+    --bg2: rgb(212, 212, 212);
+    --accent: black;
+
+}
+
+
+
 
 .nav-list {
 display: flex;
@@ -47,22 +55,27 @@ nav > ul {
 #nav {
     grid-row: 1;
     grid-column: 1 / 3;
-    background: rgb(40, 36, 37);
+    background: var(--bg);
+    border-style: inse;
 }
 .nav-item{
-    background-color: rgb(53, 57, 62);
+    background-color: var(--bg);
+    border-style: inset;
 }
  .side-nav-item {
    grid-row: 2;
    grid-column: 3;
-   background-color: rgb(48, 51, 52);
+   background-color: var(--bg);
+   border-style: inset;
    
    
    }
 #content {
     grid-row: 2;
     grid-column: 2;
-    background-color: rgb(69, 61, 48);
+    background-color: var(--bg2);
+    border-style: inset;
+    
 
 }
 
@@ -70,23 +83,35 @@ nav > ul {
 
  grid-row: 3;
  grid-column: 1 / 4;
- background-color: rgb(32, 36, 36);
+ background-color: var(--bg);
  display: flex;
  padding: 10px;
  justify-content: space-evenly;
+ border-style: inset;
 }
 
-@media screen and (max-width:500px) {
-    padding: var(--padding);
-    max-width: 960px;    
-}
 :root{
    --padding: 10px;
    --bg: rgb(69, 67, 67);
    --fg: salmon;
    --accent: rgb(255, 255, 255);
-   --bg2: rgb(77, 35, 168);
+   --bg2: rgb(44, 43, 46);
 }
 
+#theme-swap{
+    position: fixed;
+    bottom: calc(var(--padding) *2);
+    right:calc(var(--padding) *2) ;
+    cursor: pointer;
+    padding: var(--padding);
+    background-color: var(--bg);
+    border-style: none;
 
+  
+    border-radius: 50%;
+   
+}
+#theme-swap:hover{
+    background-color: var(--accent);
+}
 
