--- a/contact.css
+++ b/contact.css
@@ -4,6 +4,46 @@
     display: grid;
     grid-template-columns: auto 1fr;
     grid-auto-rows: auto;
+
     align-items: center;
     align-self: baseline;
+    gap: var(--padding);
+}
+
+#form>label {
+    grid-column: 1;
+}
+
+#form>input,
+#form>textarea {
+    grid-column: 2;
+}
+
+#form>textarea {
+    resize: vertical;
+}
+
+.input {
+    padding: calc(var(--padding)/2);
+    background-color: var(--bg2);
+    color: var(--fg);
+    border: 1px solid var(--fg);
+}
+
+.input[type="submit"]{
+    cursor: pointer;
+}
+
+.input:hover{
+    color: var(--accent);
+    border-color: var(--accent);
+    outline: 2px solid var(--accent);
+}
+
+.input:focus {
+    outline: none;
+}
+
+.input.error{
+    background-color: red;
 }
