--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap');
 
 html {
     --padding: 10px;
@@ -34,7 +34,7 @@ body {
     background-color: var(--bg);
     color: var(--fg);
 
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 @media screen and (max-width: 500px) {
